<resources>
    <string name="app_name">Joyeria</string>
    <string name="am_titulo_joyeria" translatable="false">  Jewelry J.P S.A.S</string>
    <string name="am_see_orders">See Orders</string>

    <string name="cj_create_jewelry">Create Jewelry</string>
    <string name="cj_choose_material">Choose A Material</string>
    <string name="cj_choose_stone">Choose A Stone</string>
    <string name="cj_mark_jewel">Mark Jewel</string>
    <string name="cj_order">Order</string>
    <string name="select">Select</string>

    <string name="done">Added Successfully</string>
    <string name="empty">MarkedText Can´t be empty</string>
    <string name="garment">Select a garment</string>
    <string name="material">Select a material</string>
    <string name="stone">Select a stone</string>

    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="alert_conf_remove">Do you want to remove the order?</string>
    <string name="Deleted">Removed Succesfully</string>

    <!--Item Create Jewel-->
    <string name="cj_type_item1">Bracelet</string>
    <string name="cj_type_item2">Chain</string>

    <!--Item Material Jewel-->
    <string name="cj_material_Silver">Silver</string>
    <string name="cj_material_Steel">Steel</string>
    <string name="cj_material_Gold">Gold</string>

    <!--Item Stone Jewel-->
    <string name="cj_material_Ruby">Ruby</string>
    <string name="cj_material_Emerald">Emerald</string>
    <string name="cj_material_Quarzo" translatable="false">Quarzo</string>
    <string name="noResults">No Results</string>
    <string name="od_orden_detail">Orden Detail</string>
    <string name="od_Jewel_type">Jewel Type</string>
    <string name="od_jewel_material" translatable="false">Material</string>
    <string name="od_stone">Stone</string>
    <string name="od_Mark">Mark</string>
    <string name="od_Price">Total Price</string>
    <string name="cj_TypeText">Type the phrase</string>
    <string name="od_marked_txt">Marked Text</string>
    <string name="Remove">Remove</string>

    <string-array name="Menu">
        <item>@string/cj_create_jewelry</item>
        <item>@string/am_see_orders</item>
    </string-array>

    <string-array name="type_jw">
        <item>@string/select</item>
        <item>@string/cj_type_item1</item>
        <item>@string/cj_type_item2</item>
    </string-array>

    <string-array name="material_jw">
        <item>@string/select</item>
        <item>@string/cj_material_Silver</item>
        <item>@string/cj_material_Steel</item>
        <item>@string/cj_material_Gold</item>
    </string-array>

    <string-array name="piedra_jw">
        <item>@string/select</item>
        <item>@string/cj_material_Ruby</item>
        <item>@string/cj_material_Emerald</item>
        <item>@string/cj_material_Quarzo</item>
    </string-array>





    
</resources>
